--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "package-name",
   "version": "1.0.0",
   "description": "",
-  "keywords": [],
+  "keywords": [
+    "typescript",
+    "z-base"
+  ],
   "license": "MIT",
   "type": "module",
   "main": "dist/index.js",
