--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "README.md"
   ],
   "scripts": {
+    "format": "prettier . --write",
     "build": "tsc -p tsconfig.json",
     "test": "npm run build && node test/run-coverage.mjs && node test/e2e/run.mjs",
     "bench": "npm run build && node benchmark/bench.js",
+    "prepare": "husky",
     "prepublishOnly": "npm run test && npm run bench"
   },
   "c8": {
@@ -53,10 +55,15 @@
     "node": ">=18"
   },
   "devDependencies": {
-    "@playwright/test": "^1.58.0",
-    "@types/node": "^25.0.10",
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
+    "@playwright/test": "^1.58.2",
+    "@types/node": "^25.2.2",
     "c8": "^10.1.3",
-    "playwright": "^1.58.0",
+    "fast-glob": "^3.3.3",
+    "husky": "^9.1.7",
+    "playwright": "^1.58.2",
+    "prettier": "^3.8.1",
     "typescript": "^5.6.3"
   }
 }
