--- a/package.json
+++ b/package.json
@@ -65,5 +65,10 @@
     "playwright": "^1.58.2",
     "prettier": "^3.8.1",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@z-base/bytecodec": "^1.1.0",
+    "@z-base/cryptosuite": "^1.0.1",
+    "@z-base/zero-knowledge-credentials": "^1.0.2"
   }
 }
