--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "package-name",
-  "version": "1.0.0",
+  "name": "@z-base/package-name",
+  "version": "0.0.0",
   "description": "",
   "keywords": [
     "typescript",
@@ -24,7 +24,7 @@
   "bugs": {
     "url": "https://github.com/<entity>/<package-name>/issues"
   },
-  "homepage": "https://github.com/<entity>/<package-name>#readme",
+  "homepage": "https://z-base.github.io/<package-name>",
   "files": [
     "dist",
     "LICENSE",
